# telemetric-sentinel

./: Dockerfile  pyproject.toml
src/: main.py
