[tool.poetry]
name = "telemetric-sentinel"
version = "0.1.0"
description = "A service to receive and process telemetry events from the Cortex CI/CD pipeline."
authors = ["cypher <cypher@digital-cypher.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
